# cookiecutter-django

./: .editorconfig  .gitignore  .pyup.yml  README.md  cookiecutter.json  setup.py
.github/workflows/: ci.yml  update-contributors.yml
docs/: developing-locally.rst  index.rst  project-generation-options.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bare.sh  test_cookiecutter_generation.py
{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  gulpfile.js  local.yml  manage.py  package.json  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/compose/local/django/: Dockerfile
{{cookiecutter.project_slug}}/compose/production/django/: Dockerfile  start
{{cookiecutter.project_slug}}/config/: api_router.py  urls.py
{{cookiecutter.project_slug}}/config/settings/: base.py  local.py  production.py
{{cookiecutter.project_slug}}/docs/pycharm/: configuration.rst
{{cookiecutter.project_slug}}/src/templates/: base.html
{{cookiecutter.project_slug}}/src/theme/static_src/: package.json
{{cookiecutter.project_slug}}/src/users/: admin.py
{{cookiecutter.project_slug}}/src/users/tests/: test_drf_urls.py  test_drf_views.py  test_urls.py  test_views.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: apps.py
{{cookiecutter.project_slug}}/utility/: install_python_dependencies.sh
